apps/getting-started-bgd/base/getting-started-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: getting-started
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
