apps/getting-started-bgd/base/getting-started-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getting-started
spec:
  rules:
    - host: getting-started.devnation
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: getting-started
                port:
                  number: 8080
